WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130348
[WK2] Getting rid of compilation warnings
https://bugs.webkit.org/show_bug.cgi?id=130348
Summary
[WK2] Getting rid of compilation warnings
Thiago de Barros Lacerda
Reported
2014-03-17 10:17:54 PDT
[WK2] Getting rid of compilation warnings
Attachments
Patch
(16.40 KB, patch)
2014-03-17 10:23 PDT
,
Thiago de Barros Lacerda
no flags
Details
Formatted Diff
Diff
Patch
(17.72 KB, patch)
2014-03-17 16:52 PDT
,
Thiago de Barros Lacerda
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Thiago de Barros Lacerda
Comment 1
2014-03-17 10:23:11 PDT
Created
attachment 226936
[details]
Patch
WebKit Commit Bot
Comment 2
2014-03-17 10:25:33 PDT
Attachment 226936
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/APIPolicyClient.h:54: The parameter type should use PassRefPtr instead of RefPtr. [readability/pass_ptr] [5] ERROR: Source/WebKit2/UIProcess/API/APIPolicyClient.h:61: The parameter type should use PassRefPtr instead of RefPtr. [readability/pass_ptr] [5] ERROR: Source/WebKit2/UIProcess/API/APIPolicyClient.h:67: The parameter type should use PassRefPtr instead of RefPtr. [readability/pass_ptr] [5] Total errors found: 3 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Benjamin Poulain
Comment 3
2014-03-17 16:36:41 PDT
Comment on
attachment 226936
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=226936&action=review
> Source/WebKit2/UIProcess/API/C/WKPage.cpp:705 > + UNUSED_PARAM(navigationID); > if (!m_client.didStartProvisionalLoadForFrame)
In the implementation, you remove the name of the input argument instead of using UNUSED_PARAM(). For example, in this case, you should just remove navigationID.
Thiago de Barros Lacerda
Comment 4
2014-03-17 16:52:23 PDT
Created
attachment 226982
[details]
Patch
WebKit Commit Bot
Comment 5
2014-03-17 16:54:49 PDT
Attachment 226982
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/APIPolicyClient.h:54: The parameter type should use PassRefPtr instead of RefPtr. [readability/pass_ptr] [5] ERROR: Source/WebKit2/UIProcess/API/APIPolicyClient.h:61: The parameter type should use PassRefPtr instead of RefPtr. [readability/pass_ptr] [5] ERROR: Source/WebKit2/UIProcess/API/APIPolicyClient.h:67: The parameter type should use PassRefPtr instead of RefPtr. [readability/pass_ptr] [5] Total errors found: 3 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 6
2014-03-17 20:18:12 PDT
Comment on
attachment 226982
[details]
Patch Clearing flags on attachment: 226982 Committed
r165794
: <
http://trac.webkit.org/changeset/165794
>
WebKit Commit Bot
Comment 7
2014-03-17 20:18:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug