Source/WebKit2/UIProcess/APISession.cpp
@@ -35,7 +35,7 @@ static uint64_t generateID(bool isEphemeral)
     ASSERT(RunLoop::isMain());
 
     static uint64_t uniqueSessionID = WebCore::SessionID::legacyPrivateSessionID().sessionID();
-    ASSERT(isEphemeral);
+    ASSERT_UNUSED(isEphemeral, isEphemeral);
     return ++uniqueSessionID;
 }
 
